# eksup

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  SCRATCH.md  cliff.toml  gen_examples.sh  index.html  mkdocs.yaml  playbook.md  renovate.json  rustfmt.toml  sitemap.xml
.cargo/: config.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  RELEASE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yaml  release.yaml
crates/aws/: Cargo.toml
crates/k8s/: Cargo.toml  README.md
crates/k8s/data/: deprecations.yaml
crates/k8s/src/: cluster.rs  deprecated.rs  lib.rs  main.rs
design/overview/: index.html
docs/: Scratch.md  design.md  getting-started.md  index.md  preface.md  scratch.md
docs/design/: checks.md  overview.md  scratch.md
docs/guides/: blue-green.md  in-place.md  process.md
docs/info/: checks.md  design.md  usage.md
docs/plans/: 2026-02-19-eks-cluster-insights-design.md  2026-02-19-eks-cluster-insights.md  2026-02-19-integration-e2e-tests-design.md  2026-02-19-integration-e2e-tests-plan.md  2026-02-20-configurable-replica-threshold-design.md  2026-02-20-configurable-replica-threshold.md
docs/process/: checks.md  commands.md  index.md
docs/stylesheets/: extra.css
docs/usage/: commands.md  design.md
eksup/: Cargo.toml  README.md
eksup/src/: analysis.rs  cli.rs  clients.rs  config.rs  eks.rs  finding.rs  k8s.rs  lib.rs  main.rs  output.rs  playbook.rs  version.rs
eksup/src/eks/: checks.rs  findings.rs  mod.rs  resources.rs
eksup/src/k8s/: checks.rs  findings.rs  mod.rs  resources.rs
eksup/templates/: data.yaml  eks-managed-nodegroup.md  fargate-node.md  playbook.md  self-managed-nodegroup.md
eksup/templates/data/: 1.20.toml
eksup/tests/: e2e.rs  integration.rs  smoke.rs
eksup/tests/common/: fixtures.rs  mock_aws.rs  mock_k8s.rs  mod.rs
eksup/tests/snapshots/: e2e__filter_recommended_text.snap  e2e__healthy_cluster_json.snap  e2e__healthy_cluster_text.snap  e2e__insufficient_control_plane_ips_text.snap  e2e__mixed_findings_json.snap  e2e__mixed_findings_text.snap  e2e__playbook_eks_managed_nodegroups.snap  e2e__playbook_fargate_profiles.snap  e2e__playbook_healthy.snap  e2e__playbook_mixed.snap  e2e__version_skew_text.snap  e2e__workload_issues_json.snap  e2e__workload_issues_text.snap
examples/: all-1.20.md  all-1.21.md  all-1.22.md  all-1.23.md  custom-ami-1.20.md  custom-ami-1.21.md  custom-ami-1.22.md  custom-ami-1.23.md  eks-mng-1.20.md  eks-mng-1.21.md  eks-mng-1.22.md  eks-mng-1.23.md  fargate-profile-1.20.md  fargate-profile-1.21.md  fargate-profile-1.22.md  fargate-profile-1.23.md  self-mng-1.20.md  self-mng-1.21.md  self-mng-1.22.md  self-mng-1.23.md  standard-ami-1.20.md  standard-ami-1.21.md  standard-ami-1.23.md  test-mixed_v1.24_upgrade.md  test-mixed_v1.26_upgrade.md
examples/eks-managed/: main.tf  versions.tf
examples/fargate-profile/: README.md  main.tf
examples/mixed/: main.tf  versions.tf
examples/self-managed/: README.md  main.tf
guides/blue-green/: index.html
guides/in-place/: index.html
guides/process/: index.html
info/checks/: index.html
info/design/: index.html
info/usage/: index.html
process/: index.html
process/checks/: index.html
process/commands/: index.html
scratch/: index.html
search/: search_index.json
src/: analysis.rs  aws.rs  check.rs  checks.rs  cli.rs  data.rs  eks.rs  finding.rs  k8s.rs  lib.rs  main.rs  output.rs  playbook.rs  version.rs
src/analysis/: aws.rs  kubernetes.rs  kubernetes.yaml  mod.rs
src/aws/: README.md  check.rs  mod.rs
src/k8s/: README.md  cluster.rs  deprecated.rs  main.rs  mod.rs
templates/: data.yaml  eks-managed-node-group.md  eks-managed-nodegroup.md  fargate-node.md  fargate-profile.md  playbook.md  playbook.tmpl  self-managed-node-group.md  self-managed-nodegroup.md
templates/EKS/versions/: 1_19.md  1_20.md  1_21.md  1_22.md
templates/data/: 1.21.toml  1.22.toml  1.23.toml  1.24.toml  1.25.toml  1.26.toml  1.27.toml
templates/data-plane/: eks-managed-node-group.md  fargate-profile.md  self-managed-node-group.md
templates/eks/versions/: 1-19.md  1-20.md  1-21.md  1-22.md  1-23.md  1-24.md  1_24.md
templates/process/: cli.tmpl
test/self-managed/: main.tf
tests/: cronjob.yaml  daemonset.yaml  deployment.yaml  job.yaml  replicaset.yaml  statefulset.yaml
xtask/: Cargo.toml
xtask/src/: main.rs
