[package]
name = "eksup"
version = "0.1.0"
authors = ["Bryant Biggs <bryantbiggs@gmail.com>"]
description = "A CLI to aid in upgrading Amazon EKS clusters"
documentation = "https://github.com/clowdhaus/eksup"
homepage = "https://github.com/clowdhaus/eksup"
repository = "https://github.com/clowdhaus/eksup"
license = "Apache-2.0"
edition = "2021"
keywords = [
  "kubernetes",
  "eks",
]
categories = [
  "command-line-utilities",
  "text-processing",
]
exclude = ["/.github", ".gitignore", "examples"]

default-run = "eksup"

[[bin]]
name = "eksup"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
aws-config = "0.52"
aws-sdk-ec2 = "0.22"
aws-sdk-eks = "0.22"
aws-types = "0.52"
clap = { version = "^4.0", features = ["derive"] }
handlebars = { version = "4.3", features = ["rust-embed"] }
# https://kube.rs/kubernetes-version/
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_20"] }
# https://kube.rs/kubernetes-version/
kube = { version = "0.74.0", default-features = true, features = [ "derive", "runtime", "rustls-tls" ] }
rust-embed = { version = "6.4", features = ["compression"] }
seq-macro = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.23", features = ["full"] }
