[package]
name = "eksup"
version = "0.11.1"
authors = ["Bryant Biggs <bryantbiggs@gmail.com>"]
description = "A CLI to aid in upgrading Amazon EKS clusters"
documentation = "https://github.com/clowdhaus/eksup"
homepage = "https://github.com/clowdhaus/eksup"
repository = "https://github.com/clowdhaus/eksup"
license = "Apache-2.0"
edition = "2024"
keywords = [
  "kubernetes",
  "eks",
]
categories = [
  "command-line-utilities",
  "text-processing",
]
exclude = ["/.github", ".gitignore", "docs", "examples", "tests"]

default-run = "eksup"

[[bin]]
name = "eksup"
path = "src/main.rs"

[dependencies]
anstyle = "1.0"
anyhow = "1.0"
aws-config = { version="1.8", features = ["behavior-version-latest"] }
aws-sdk-autoscaling = "1.85"
aws-sdk-ec2 = "1.146"
aws-sdk-eks = "1.96"
aws-types = "1.1"
clap = { version = "4.5", features = ["derive", "string", "color", "unstable-styles"] }
clap-verbosity-flag = "3.0"
handlebars = { version = "6.3", features = ["rust-embed"] }
itertools = "0.14"
# https://kube.rs/kubernetes-version/
k8s-openapi = { version = "0.25.0", default-features = false, features = ["earliest"] }
kube = { version = "1.1", default-features = false, features = [ "client", "derive", "aws-lc-rs", "rustls-tls" ] }
rust-embed = { version = "8.7", features = ["compression"] }
schemars = "0.8.6"
seq-macro = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tabled = "0.20"
tokio = { version = "1.46", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = {version = "0.1", features = ["log-always"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }
