[package]
name = "eksup"
version = "0.13.0"
authors = ["Bryant Biggs <bryantbiggs@gmail.com>"]
description = "A CLI to aid in upgrading Amazon EKS clusters"
documentation = "https://github.com/clowdhaus/eksup"
homepage = "https://github.com/clowdhaus/eksup"
repository = "https://github.com/clowdhaus/eksup"
license = "Apache-2.0"
edition = "2024"
keywords = [
  "kubernetes",
  "eks",
]
categories = [
  "command-line-utilities",
  "text-processing",
]
exclude = ["/.github", ".gitignore", "docs", "examples", "tests"]

default-run = "eksup"

[[bin]]
name = "eksup"
path = "src/main.rs"

[dependencies]
anstyle = "1.0"
anyhow = "1.0"
aws-config = { version="1.8", features = ["behavior-version-latest"] }
aws-sdk-autoscaling = "1.109"
aws-sdk-ec2 = "1.211"
aws-sdk-eks = "1.123"
aws-sdk-servicequotas = "1"
aws-types = "1.1"
clap = { version = "4.5", features = ["derive", "string", "color", "unstable-styles"] }
clap-verbosity-flag = "3.0"
indicatif = "0.18"
handlebars = { version = "6.4", features = ["rust-embed"] }
# https://kube.rs/kubernetes-version/
k8s-openapi = { version = "0.27.0", default-features = false, features = ["earliest"] }
kube = { version = "3.0", default-features = false, features = [ "client", "derive", "aws-lc-rs", "rustls-tls" ] }
rust-embed = { version = "8.11", features = ["compression"] }
schemars = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tabled = "0.20"
tokio = { version = "1.49", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = {version = "0.1", features = ["log-always"] }
tracing-log = "0.2"
tracing-subscriber = "0.3"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
tempfile = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }
