[package]
name = "r8s"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "r8s"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
# https://kube.rs/kubernetes-version/
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_20"] }
# https://kube.rs/kubernetes-version/
kube = { version = "0.74.0", default-features = true, features = [ "derive", "runtime", "rustls-tls" ] }
rust-embed = { version = "6.4", features = ["compression"] }
serde = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.23", features = ["full"] }
